# process_cli

./: .pre-commit-config.yaml  Cargo.toml
src/: config.rs  config.toml  main.rs  process.rs
