[package]
name = "process"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "3.2.19", features = ["derive"] }
anyhow = "1.0.63"
log = "0.4.17"
env_logger = "0.9.0"
confy = {version = "0.4.0"}
serde_derive = "1.0.144"
serde = "1.0.144"
rayon = "1.5.3"

